# dataspec

./: Cargo.toml  LICENSE  README.md
src/: error.rs  handler.rs  lib.rs  main.rs
src/context/: ctx.rs  mod.rs  render.rs
src/engines/: bq.rs  common.rs  dryrun.rs  mod.rs  pg.rs
src/entities/: column.rs  config.rs  data_catalog.rs  execution_plan.rs  mod.rs  model.rs  operation.rs  operation_usage.rs  template.rs  template_usage.rs  test.rs  transformation.rs
src/parser/: ast.rs  extract.rs  markdown.rs  mod.rs
src/scaffold/: mod.rs
