[package]
name = "dataspec"
version = "0.1.0"
edition = "2021"
description = "Compiler for Data Specs markdown definitions"
license = "Apache-2.0"

[[bin]]
name = "dataspec"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.13"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
subst = "0.3.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
gcp-bigquery-client = { version = "0.20", optional = true }
tokio-postgres = { version = "0.7", optional = true }

[features]
default = []
bq = ["dep:gcp-bigquery-client"]
pg = ["dep:tokio-postgres"]

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
